--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sand Reveal with Logo</title>
+  <title>Atomo</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <canvas id="sandCanvas"></canvas>
+  <div id="matter">
+    <img src="matter.png" alt="Matter" class="hover-effect matter">
+  </div>
   <div class="content">
     <img src="atomo.png" alt="Your Logo" id="logo">
     <div class="hover-container">
@@ -18,14 +21,10 @@
       <h1 style="text-align:left;float:left;" class="hover-effect">N</h1> 
       <h1 style="text-align:left;float:left;" class="hover-effect">G</h1> 
       <h1 style="text-align:left;float:left;" class="hover-effect">&nbsp;</h1>
-      <h1 style="text-align:right;float:right;" class="hover-effect">N</h1>
-      <h1 style="text-align:right;float:right;" class="hover-effect">O</h1> 
-      <h1 style="text-align:right;float:right;" class="hover-effect">O</h1> 
       <h1 style="text-align:right;float:right;" class="hover-effect">S</h1> 
-      <!-- <h1 class="hover-effect">Coming Soon</h1> -->
-      <!-- <hr style="clear:both;"/> -->
-
-
+      <h1 style="text-align:right;float:right;" class="hover-effect">O</h1> 
+      <h1 style="text-align:right;float:right;" class="hover-effect">O</h1> 
+      <h1 style="text-align:right;float:right;" class="hover-effect">N</h1>
       <div class="hover-mask"></div>
     </div>
   </div>
