--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 <body>
   <canvas id="sandCanvas"></canvas>
   <div id="matter">
-    <img src="matter.png" alt="Matter" class="hover-effect matter">
+    <img src="image1.png" alt="Matter" class="hover-effect matter" id="matterImage">
   </div>
   <div class="content">
     <img src="atomo.png" alt="Your Logo" id="logo">
     <div class="hover-container">
-      <h1 style="text-align:left;float:left;" class="hover-effect">C</h1> 
-      <h1 style="text-align:left;float:left;" class="hover-effect">O</h1> 
-      <h1 style="text-align:left;float:left;" class="hover-effect">M</h1> 
-      <h1 style="text-align:left;float:left;" class="hover-effect">I</h1> 
-      <h1 style="text-align:left;float:left;" class="hover-effect">N</h1> 
-      <h1 style="text-align:left;float:left;" class="hover-effect">G</h1> 
-      <h1 style="text-align:left;float:left;" class="hover-effect">&nbsp;</h1>
-      <h1 style="text-align:right;float:right;" class="hover-effect">S</h1> 
-      <h1 style="text-align:right;float:right;" class="hover-effect">O</h1> 
-      <h1 style="text-align:right;float:right;" class="hover-effect">O</h1> 
-      <h1 style="text-align:right;float:right;" class="hover-effect">N</h1>
+      <h1 style="text-align:left;float:left;" class="hover-effect resp">C</h1> 
+      <h1 style="text-align:left;float:left;" class="hover-effect resp">O</h1> 
+      <h1 style="text-align:left;float:left;" class="hover-effect resp">M</h1> 
+      <h1 style="text-align:left;float:left;" class="hover-effect resp">I</h1> 
+      <h1 style="text-align:left;float:left;" class="hover-effect resp">N</h1> 
+      <h1 style="text-align:left;float:left;" class="hover-effect resp">G</h1> 
+      <h1 style="text-align:left;float:left;" class="hover-effect resp">&nbsp;</h1>
+      <h1 style="text-align:right;float:right;" class="hover-effect resp">S</h1> 
+      <h1 style="text-align:right;float:right;" class="hover-effect resp">O</h1> 
+      <h1 style="text-align:right;float:right;" class="hover-effect resp">O</h1> 
+      <h1 style="text-align:right;float:right;" class="hover-effect resp">N</h1>
+      <h1 style="text-align:right;float:right;" class="hover-effect resp1">COMING SOON</h1>
       <div class="hover-mask"></div>
     </div>
   </div>
