updated_coming soon

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <div class="content">
     <img src="atomo.png" alt="Your Logo" id="logo">
     <div class="hover-container">
-      <h1 style="text-align:left;float:left;" class="hover-effect resp">C</h1> 
-      <h1 style="text-align:left;float:left;" class="hover-effect resp">O</h1> 
+      <h1 style="text-align:left;float:left;" class="hover-effect resp">COMING SOON</h1> 
+      <!-- <h1 style="text-align:left;float:left;" class="hover-effect resp">O</h1> 
       <h1 style="text-align:left;float:left;" class="hover-effect resp">M</h1> 
       <h1 style="text-align:left;float:left;" class="hover-effect resp">I</h1> 
       <h1 style="text-align:left;float:left;" class="hover-effect resp">N</h1> 
@@ -24,7 +24,7 @@
       <h1 style="text-align:right;float:right;" class="hover-effect resp">S</h1> 
       <h1 style="text-align:right;float:right;" class="hover-effect resp">O</h1> 
       <h1 style="text-align:right;float:right;" class="hover-effect resp">O</h1> 
-      <h1 style="text-align:right;float:right;" class="hover-effect resp">N</h1>
+      <h1 style="text-align:right;float:right;" class="hover-effect resp">N</h1> -->
       <h1 style="text-align:right;float:right;" class="hover-effect resp1">COMING SOON</h1>
       <div class="hover-mask"></div>
     </div>
